@@ -3,6 +3,8 @@ Revision history for TAP-Parser
 2.99_03
         - Refactored all display specific code out of TAP::Harness.
         - Relaxed strict parsing of skip plan for pre v13 TAP.
+        - Elapsed hi-res time is now displayed in integer milliseconds
+          instead of fractional seconds.
 
 2.99_02 2007-09-07
         - Ensure prove (and App::Prove) sort any recursively
